# IDA-Fusion

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
cmake/: FindIDASDK.cmake  toolchain-x64.cmake  toolchain-x86.cmake
include/: c_signature_generator.h  link.h  n_settings.h  n_signature.h  n_utils.h  typedefs.h
include/fusion/: plugin.h  settings.h  signature.h  types.h  utils.h
src/: main.cpp  plugin.cpp  signature.cpp
tests/: test_signature.cpp
